<resources>
    <string name="app_name">Droid-Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Titulo">Droid Desserts</string>


    <string name="donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    <string name="donut_order">Donut.</string>
    <string name="ice_cream_order">Ice Cream Sandwich.</string>
    <string name="froyo_order"> FroYo.</string>
    <string name="lblNombre">Nombre</string>
    <string name="lblDireccion">Direccion</string>
    <string name="lblNota">Nota</string>
    <string name="selecciona">Elige el metodo de Delivery</string>
    <string name="rbDia">Same day message service</string>
    <string name="rbNextDay">Next Day Ground Delivery</string>
    <string name="rbPickUp">Pick Up</string>
    <string name="Title">Contact</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="titli_favoritos">Favoritos</string>
    <string name="titleInfo">Estado</string>
    <string name="titleOrden">Orden</string>

</resources>