<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.germany.droid_cafe.MainActivity">
    <item
        android:id="@+id/actionContact"
        android:orderInCategory="100"
        android:title="@string/Title"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionOrden"
        android:icon="@drawable/cart"
        android:orderInCategory="10"
        android:title="@string/titleOrden"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionEstado"
        android:icon="@drawable/icon_info"
        android:orderInCategory="20"
        android:title="@string/titleInfo"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionFavoritos"
        android:icon="@drawable/icon_favorito"
        android:orderInCategory="30"
        android:title="@string/titli_favoritos"
        app:showAsAction="ifRoom" />
</menu>